Updated ui code fixed few
Updated ui code fixed few

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link rel="stylesheet" href="styles.b77e8b0cc8afbfc9e5b9.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="polyfills-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule></script><script src="polyfills-es5.js" nomodule></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule></script><script src="main-es5.js" nomodule></script></body>
+<script src="runtime-es2015.b7221955b56ca238a862.js" type="module"></script><script src="polyfills-es2015.9c3f2c8c05f26e86793f.js" type="module"></script><script src="runtime-es5.8cbda37452fab8baba0a.js" nomodule></script><script src="polyfills-es5.0a5aa62435a25eef6c98.js" nomodule></script><script src="main-es2015.30e414f21f82dfc52338.js" type="module"></script><script src="main-es5.cd9ed5874337daeb52b9.js" nomodule></script></body>
 </html>
